--- a/ios/Truffle/Info.plist
+++ b/ios/Truffle/Info.plist
@@ -6,6 +6,7 @@
 		<array>
 		<string>Ionicons.ttf</string>
 		<string>FontAwesome.ttf</string>
+		<string>Octicons.ttf</string>
 		</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
