--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native/new-app-screen": "0.81.1",
